--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,11 @@
     <description>camel</description>
     <properties>
         <camel-version>4.3.0</camel-version>
-        <java.version>21</java.version>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <cxf-version>4.0.3</cxf-version>
+        <java.version>17</java.version>
+        <jaxb-plugins-runtime-version>3.0.0</jaxb-plugins-runtime-version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <spotless.version>2.43.0</spotless.version>
         <spring.boot-version>3.2.2</spring.boot-version>
     </properties>
@@ -46,11 +48,31 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-activemq-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-bean-validator-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-cxf-soap-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-endpointdsl-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-http-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jaxb-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
@@ -63,6 +85,22 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-springdoc-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>4.0.3</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.jaxb</groupId>
+            <artifactId>jaxb-plugins-runtime</artifactId>
+            <version>${jaxb-plugins-runtime-version}</version>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
@@ -101,6 +139,74 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+            <plugin>
+                <groupId>org.apache.cxf</groupId>
+                <artifactId>cxf-codegen-plugin</artifactId>
+                <version>${cxf-version}</version>
+                <executions>
+                    <execution>
+                        <id>generate-sources</id>
+                        <goals>
+                            <goal>wsdl2java</goal>
+                        </goals>
+                        <phase>generate-sources</phase>
+                        <configuration>
+                            <sourceRoot>${project.build.directory}/generated-sources/cxf</sourceRoot>
+                            <wsdlOptions>
+                                <wsdlOption>
+                                    <wsdl>src/main/resources/static/server.wsdl</wsdl>
+                                    <faultSerialVersionUID>1</faultSerialVersionUID>
+                                    <bindingFiles>
+                                        <bindingFile>src/main/resources/static/xjb-bindings.xjb</bindingFile>
+                                    </bindingFiles>
+                                    <extraargs>
+                                        <extraarg>-xjc-npa</extraarg>
+                                        <extraarg>-impl</extraarg>
+                                        <extraarg>-client</extraarg>
+                                    </extraargs>
+                                </wsdlOption>
+                            </wsdlOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.jvnet.jaxb</groupId>-->
+            <!--                <artifactId>jaxb-maven-plugin</artifactId>-->
+            <!--                <version>4.0.0</version>-->
+            <!--                <configuration>-->
+            <!--                    <schemaLanguage>WSDL</schemaLanguage>-->
+            <!--                    <schemaDirectory>src/main/resources/static</schemaDirectory>-->
+            <!--                    <schemaIncludes>server.wsdl</schemaIncludes>-->
+            <!--                    <bindingDirectory>src/main/resources/static</bindingDirectory>-->
+            <!--                    <bindingIncludes>-->
+            <!--                        <include>xjb-bindings.xjb</include>-->
+            <!--                    </bindingIncludes>-->
+            <!--                    <generatePackage>com.defers.camel.app.adapter.soap.dto</generatePackage>-->
+            <!--                    <args>-->
+            <!--                        &lt;!&ndash; Убираем генерацию package-info файла, чтобы namespace генерировался для каждого класса&ndash;&gt;-->
+            <!--                        <arg>-npa</arg>-->
+            <!--                        &lt;!&ndash; Генерируем дополнительные методы https://github.com/highsource/jaxb-tools?tab=readme-ov-file#jaxb-plugins&ndash;&gt;-->
+            <!--                        <arg>-XtoString</arg>-->
+            <!--                        <arg>-Xequals</arg>-->
+            <!--                        <arg>-XhashCode</arg>-->
+            <!--                    </args>-->
+            <!--                    <plugins>-->
+            <!--                        <plugin>-->
+            <!--                            <groupId>org.jvnet.jaxb</groupId>-->
+            <!--                            <artifactId>jaxb-plugins</artifactId>-->
+            <!--                            <version>${jaxb-plugins-runtime-version}</version>-->
+            <!--                        </plugin>-->
+            <!--                    </plugins>-->
+            <!--                </configuration>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>generate</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
