--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jacksonxml-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jaxb-starter</artifactId>
         </dependency>
         <dependency>
@@ -101,6 +105,10 @@
             <groupId>org.jvnet.jaxb</groupId>
             <artifactId>jaxb-plugins-runtime</artifactId>
             <version>${jaxb-plugins-runtime-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.messaginghub</groupId>
+            <artifactId>pooled-jms</artifactId>
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
